[package]
name = "nibbles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
mio = { version = "0.8.8", features = ["os-poll", "os-ext", "net"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
